--- a/Introduction to R.Rmd
+++ b/Introduction to R.Rmd
@@ -11,7 +11,7 @@ RStudio is your dashboard for writing R scripts. Script files will show up in th
 
 The upper-right quadrant has several tabs, the first of which is **environment**: if you store any information in variables (such as a table of data), they will show up there.
 
-The lower-right quadrant also has several tabs, the first of which is Files: it shows what files exist in your current working directory, which is the class folder which has the `.Rproj` file we clicked on. Go ahead and click once on the `scripts` folder and then the `Introduction.Rmd` file, which is an R Notebook file. It will appear in the upper-left quadrant.
+The lower-right quadrant also has several tabs, the first of which is Files: it shows what files exist in your current working directory, which is the class folder which has the `.Rproj` file we clicked on. Go ahead and click once on the `scripts` folder and then the `first-r-notebook.Rmd` file, which is an R Notebook file. It will appear in the upper-left quadrant.
 
 In the lower-left, you'll see the **Console**. This will reflect all the R code you run, but we don't do much with it when we're working in R Notebook files.
 
@@ -31,7 +31,7 @@ You create a code chunk by typing `ctrl+alt+i` (`cmd+option+i` on a Mac) and you
 Some important terminology has come up already:
 
 -   **Notebook**: a certain type of R script that allows us to write whatever text we want, including `code` inside of code chunks
--   **code chunk**: created by typing `ctrl+alt+i` (on a PC), type your code inside code chunks.
+-   **code chunk**: created by typing `ctrl+alt+i` (`cmd+option+i` on a Mac), type your code inside code chunks.
 -   **environment**: this is basically your workspace for every R session. It's empty until you start storing information in variables.
 -   **variable**: a variable is a container that holds something. For example, the following code stores the word "spaghetti" into a variable named "x", using the assignment operator `<-`, and then prints the contents of that variable to the console below the code chunk:
 
@@ -55,7 +55,7 @@ Naming variables: you can use letters, numbers, underscores and dots
 | var_name%     | invalid  | has the character '%' (not allowed)                       |
 | 2var_name     | invalid  | starts with a number                                      |
 | .2var_name    | invalid  | cannot start with a dot and a number                      |
-| \_var_name    | invalid  | cannot start with underscore                              |
+|  _var_name    | invalid  | cannot start with underscore                              |
 
 -   **data types**:
     -   character: commonly referred to as a string; can be letters, numbers, punctuation, etc. Always enclosed in "double quotes".
@@ -81,7 +81,7 @@ sum(x,y)
 
 -   **package**: a set of features and functions that are not a part of base R (what you initially installed), but that you can add to R to increase its functionality. You install packages once by using the `install.packages()` function. Then every time you want to use a package (such as tidyverse) in your script, you load it into your environment using the `library()` function. All the necessary packages for this class have already been installed.
 
--   **pipe**: a pipe does what it sounds like: it pipes information from one function to the next. It is a part of the [tidyverse](https://www.tidyverse.org/) **package**, which is the primary set of tools we use for data analysis in R. You will use the pipe a lot, and it looks like this: `%>%`. A shortcut for typing it is `ctrl+shift+m`.
+-   **pipe**: a pipe does what it sounds like: it pipes information from one function to the next. It is a part of the [tidyverse](https://www.tidyverse.org/) **package**, which is the primary set of tools we use for data analysis in R. You will use the pipe a lot, and it looks like this: `%>%`. A shortcut for typing it is `ctrl+shift+m` (`cmd+option+m` on a Mac).
 
 
 ### Part Three: The key to understanding programming...
@@ -92,8 +92,4 @@ Additionally, data can be passed (or **piped**) through functions that filter, s
 
 ### Part Four: Time to write some code
 
-Using the Files pane in the lower-right quadrant, click once on the `scripts` folder and then on the filename `R-Basics.Rmd`. It should open in the upper-left quadrant.
-
-Some of the code is already written out. You can run it by clicking the green "play" button in the upper-right corner of a code chunk. You can also run individual lines of code in a code chunk by putting your cursor on that line and typing `ctrl+enter`.
-
-You will also have the chance to type your own code.
+To create Notebook files, use File > New File > R Notebook; or the first button in the button bar above (which looks like a white box with a green plus sign on it). Then you're ready to code!
